src/rules/flake8_unused_arguments/snapshots/ruff__rules__flake8_unused_arguments__tests__ARG003_ARG.py.snap
---
source: src/rules/flake8_unused_arguments/mod.rs
expression: diagnostics
---
- kind:
    UnusedClassMethodArgument: x
  location:
    row: 45
    column: 15
  end_location:
    row: 45
    column: 16
  fix: ~
  parent: ~

