src/rules/flake8_unused_arguments/snapshots/ruff__rules__flake8_unused_arguments__tests__ARG004_ARG.py.snap
---
source: src/rules/flake8_unused_arguments/mod.rs
expression: diagnostics
---
- kind:
    UnusedStaticMethodArgument: cls
  location:
    row: 49
    column: 10
  end_location:
    row: 49
    column: 13
  fix: ~
  parent: ~
- kind:
    UnusedStaticMethodArgument: x
  location:
    row: 49
    column: 15
  end_location:
    row: 49
    column: 16
  fix: ~
  parent: ~
- kind:
    UnusedStaticMethodArgument: x
  location:
    row: 53
    column: 10
  end_location:
    row: 53
    column: 11
  fix: ~
  parent: ~

