src/rules/flake8_unused_arguments/snapshots/ruff__rules__flake8_unused_arguments__tests__ARG005_ARG.py.snap
---
source: src/rules/flake8_unused_arguments/mod.rs
expression: diagnostics
---
- kind:
    UnusedLambdaArgument: x
  location:
    row: 28
    column: 7
  end_location:
    row: 28
    column: 8
  fix: ~
  parent: ~

