src/rules/flake8_unused_arguments/snapshots/ruff__rules__flake8_unused_arguments__tests__ignore_variadic_names.snap
---
source: src/rules/flake8_unused_arguments/mod.rs
expression: diagnostics
---
- kind:
    UnusedFunctionArgument: a
  location:
    row: 1
    column: 6
  end_location:
    row: 1
    column: 7
  fix: ~
  parent: ~
- kind:
    UnusedFunctionArgument: b
  location:
    row: 1
    column: 9
  end_location:
    row: 1
    column: 10
  fix: ~
  parent: ~
- kind:
    UnusedFunctionArgument: a
  location:
    row: 5
    column: 6
  end_location:
    row: 5
    column: 7
  fix: ~
  parent: ~
- kind:
    UnusedFunctionArgument: b
  location:
    row: 5
    column: 9
  end_location:
    row: 5
    column: 10
  fix: ~
  parent: ~
- kind:
    UnusedMethodArgument: a
  location:
    row: 10
    column: 16
  end_location:
    row: 10
    column: 17
  fix: ~
  parent: ~
- kind:
    UnusedMethodArgument: b
  location:
    row: 10
    column: 19
  end_location:
    row: 10
    column: 20
  fix: ~
  parent: ~
- kind:
    UnusedMethodArgument: a
  location:
    row: 13
    column: 16
  end_location:
    row: 13
    column: 17
  fix: ~
  parent: ~
- kind:
    UnusedMethodArgument: b
  location:
    row: 13
    column: 19
  end_location:
    row: 13
    column: 20
  fix: ~
  parent: ~

